--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"
         ></script>
-        <script src="js/app.js" type="module"></script>
+        <!-- <script src="js/app.js" type="module"></script> -->
+        <script src="js/main.js" type="module"></script>
     </body>
 </html>
